feat: 基础switch样式，能够通过回调函数获得绑定的变量，需完善

--- a/src/style/themes/variable.less
+++ b/src/style/themes/variable.less
@@ -97,3 +97,5 @@
 
 @btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
   border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out ;
+//switch
+@switch-defalut-weight: @font-size-base ;
