--- a/src/drawer/style/index.less
+++ b/src/drawer/style/index.less
@@ -12,7 +12,22 @@
     .mark {
         position: absolute;
         background-color: white;
-        width: 30vw;
-        height: 100vh;
+
+        .drawer_title {
+            height: 50px;
+            margin-left: 30px;
+            margin-top: 32px;
+        }
+
+        .drawer_divide {
+            background-color: #e9ecef;
+            height: 1px;
+            width: 100%;
+        }
+
+        .drawer_children {
+            margin-left: 30px;
+            margin-top: 30px;
+        }
     }
 }
