feat(avatar): avatar头像组件

--- a/src/style/themes/variable.less
+++ b/src/style/themes/variable.less
@@ -108,4 +108,8 @@
 @switch-circle-border-radius: 8px ;
 @switch-circle-margin-left: 30px ;
 @switch-circle-transition:all 0.3s;
+//avatar
+@avatar-r: 50px ;
+@avatar-group-margin-left:-15px;
+@avatar-group-border: 2px solid @white;
 
