--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,3 +1,4 @@
 @import './themes/index.less';
 @import '../button/style/index.less';
 @import '../switch/style/index.less';
+@import '../avatar/style/index.less';
