--- a/src/Alert/style/index.less
+++ b/src/Alert/style/index.less
@@ -40,18 +40,18 @@
   }
 }
 
-.alt-success{
-  .alt-style(@success,@success)
+.alt-success {
+  .alt-style(@success,@success);
 }
 
-.alt-danger{
-  .alt-style(@danger,@danger)
+.alt-danger {
+  .alt-style(@danger,@danger);
 }
 
-.alt-info{
-  .alt-style(@info,@info)
+.alt-info {
+  .alt-style(@info,@info);
 }
 
-.alt-warning{
-  .alt-style(@warning,@warning)
+.alt-warning {
+  .alt-style(@warning,@warning);
 }
