--- a/src/Icon/style/index.less
+++ b/src/Icon/style/index.less
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 3875086 */
+  font-family: iconfont; /* Project id 3875086 */
   src: url('//at.alicdn.com/t/c/font_3875086_cwb4v5gxk05.woff2?t=1675216355727') format('woff2'),
        url('//at.alicdn.com/t/c/font_3875086_cwb4v5gxk05.woff?t=1675216355727') format('woff'),
        url('//at.alicdn.com/t/c/font_3875086_cwb4v5gxk05.ttf?t=1675216355727') format('truetype');
 }
 
 .iconfont {
-  font-family: "iconfont" !important;
+  font-family: iconfont !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
@@ -14,70 +14,70 @@
   cursor: pointer;
 }
 
-.icon-add:before {
+.icon-add::before {
   content: "\e664";
 }
 
-.icon-add-circle:before {
+.icon-add-circle::before {
   content: "\e665";
 }
 
-.icon-arrow-up-circle:before {
+.icon-arrow-up-circle::before {
   content: "\e666";
 }
 
-.icon-arrow-right-circle:before {
+.icon-arrow-right-circle::before {
   content: "\e667";
 }
 
-.icon-arrow-down:before {
+.icon-arrow-down::before {
   content: "\e668";
 }
 
-.icon-browse:before {
+.icon-browse::before {
   content: "\e669";
 }
 
-.icon-bottom:before {
+.icon-bottom::before {
   content: "\e66a";
 }
 
-.icon-bad:before {
+.icon-bad::before {
   content: "\e66b";
 }
 
-.icon-arrow-left-circle:before {
+.icon-arrow-left-circle::before {
   content: "\e66c";
 }
 
-.icon-cry:before {
+.icon-cry::before {
   content: "\e66d";
 }
 
-.icon-direction-down:before {
+.icon-direction-down::before {
   content: "\e66e";
 }
 
-.icon-download:before {
+.icon-download::before {
   content: "\e66f";
 }
 
-.icon-edit:before {
+.icon-edit::before {
   content: "\e670";
 }
 
-.icon-error:before {
+.icon-error::before {
   content: "\e671";
 }
 
-.icon-favorite:before {
+.icon-favorite::before {
   content: "\e672";
 }
 
-.icon-fabulous:before {
+.icon-fabulous::before {
   content: "\e673";
 }
 
-.icon-shangjiadianpu:before {
+.icon-shangjiadianpu::before {
   content: "\ffbc";
 }
