--- a/src/style/index.less
+++ b/src/style/index.less
@@ -3,3 +3,6 @@
 @import '../drawer/style/index.less';
 @import '../switch/style/index.less';
 @import '../avatar/style/index.less';
+@import '../Alert/style/index.less';
+@import '../select/style/index.less';
+@import '../icon/style/index.less';
