feat(progress): line type of progress

--- a/src/style/themes/variable.less
+++ b/src/style/themes/variable.less
@@ -42,7 +42,6 @@
 @green: #b7eb8f ;
 @teal: #20c997 ;
 @cyan: #17a2b8 ;
-@cyan: #17a2b8;
 
 // specific color
 @body-color:@gray-900;
@@ -97,3 +96,8 @@
 
 @btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
   border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out ;
+
+// Progress
+@progress-radius:100px;
+@progress-default-color:@primary;
+@progress-remaining-color: rgba(0, 0, 0, 0.04);
