--- a/src/style/themes/variable.less
+++ b/src/style/themes/variable.less
@@ -1,5 +1,5 @@
 // font
-@font-size-base:1rem;
+@font-size-base:16px;
 @font-size-sm:0.8*@font-size-base;
 @font-size-md:@font-size-base;
 @font-size-lg:1.2*@font-size-base;
