--- a/src/Icon/style/index.less
+++ b/src/Icon/style/index.less
@@ -1,8 +1,8 @@
 @font-face {
   font-family: iconfont; /* Project id 3875086 */
-  src: url('//at.alicdn.com/t/c/font_3875086_cwb4v5gxk05.woff2?t=1675216355727') format('woff2'),
-       url('//at.alicdn.com/t/c/font_3875086_cwb4v5gxk05.woff?t=1675216355727') format('woff'),
-       url('//at.alicdn.com/t/c/font_3875086_cwb4v5gxk05.ttf?t=1675216355727') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_3875086_8uvwt6s9qhy.woff2?t=1675745535838') format('woff2'),
+    url('//at.alicdn.com/t/c/font_3875086_8uvwt6s9qhy.woff?t=1675745535838') format('woff'),
+    url('//at.alicdn.com/t/c/font_3875086_8uvwt6s9qhy.ttf?t=1675745535838') format('truetype');
 }
 
 .iconfont {
@@ -12,6 +12,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   cursor: pointer;
+}
+
+.icon-fail::before {
+  content: "\e8c5";
+}
+
+.icon-success::before {
+  content: "\e8c3";
 }
 
 .icon-add::before {
@@ -76,8 +84,4 @@
 
 .icon-fabulous::before {
   content: "\e673";
-}
-
-.icon-shangjiadianpu::before {
-  content: "\ffbc";
 }
