--- a/src/Icon/style/index.css
+++ b/src/Icon/style/index.css
@@ -1,5 +1,6 @@
+/* 
 @font-face {
-    font-family: "iconfont"; /* Project id 3875086 */
+    font-family: "iconfont"; Project id 3875086
     src: url('//at.alicdn.com/t/c/font_3875086_cwb4v5gxk05.woff2?t=1675216355727') format('woff2'),
          url('//at.alicdn.com/t/c/font_3875086_cwb4v5gxk05.woff?t=1675216355727') format('woff'),
          url('//at.alicdn.com/t/c/font_3875086_cwb4v5gxk05.ttf?t=1675216355727') format('truetype');
@@ -81,4 +82,4 @@
   .icon-shangjiadianpu:before {
     content: "\ffbc";
   }
-  
+*/
