--- a/src/input/style/index.less
+++ b/src/input/style/index.less
@@ -3,7 +3,8 @@
     border: 1px solid rgb(217, 217, 217);
     border-radius: 7px;
     outline: none;
-    display: block;
+    display: inline-block;
+    width: 100%;
 
     &:hover {
         border: 1px solid rgb(64, 150, 255);
@@ -14,12 +15,17 @@
 .input_basic {
     .basicBorder;
 
-    width: 30vw;
-    height: 32px;
+    text-indent: .8em;
+    // width: 100%;
+    height: 25px;
+    line-height: 25px;
+    text-align: start;
+    vertical-align: top;
 
     &::placeholder {
-        font-size: 16px;
-        padding-left: 10px;
+        padding-left: 2px;
+        // height: 32px;
+        // line-height: 32px;
     }
 }
 
@@ -27,10 +33,12 @@
 
 .small {
     height: 24px;
+    line-height: 24px;
 }
 
 .large {
     height: 40px;
+    line-height: 40px;
 }
 
 // status的改变
