--- a/src/style/index.less
+++ b/src/style/index.less
@@ -6,3 +6,4 @@
 @import '../Alert/style/index.less';
 @import '../select/style/index.less';
 @import '../icon/style/index.less';
+@import '../table/style/index.less';
