feat(form): form ,and other change

--- a/src/button/style/mixins.less
+++ b/src/button/style/mixins.less
@@ -35,7 +35,7 @@
   }
 }
 
-.l-btn {
-  margin-right: 8px;
-  margin-bottom: 12px;
-}
+// .l-btn {
+//   margin-right: 8px;
+//   margin-bottom: 12px;
+// }
