--- a/src/style/index.less
+++ b/src/style/index.less
@@ -3,3 +3,4 @@
 @import '../drawer/style/index.less';
 @import '../switch/style/index.less';
 @import '../avatar/style/index.less';
+@import '../menu/style/index.less';
