--- a/src/style/index.less
+++ b/src/style/index.less
@@ -4,3 +4,4 @@
 @import '../switch/style/index.less';
 @import '../avatar/style/index.less';
 @import '../menu/style/index.less';
+@import '../Spin/style/index.less';
